# polars-matrix

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
polars_matrix/: __init__.py
src/: expressions.rs  lib.rs  matrix.rs
src/polars_matrix/: __init__.py
