[package]
name = "polars_matrix"
version = "0.1.0"
edition = "2021"

[lib]
name = "polars_matrix"
crate-type = ["cdylib"]

[dependencies]
arrow = "55.2.0"
polars-arrow = "0.49.0"
polars = { version = "0.49.0", features = ["dtype-array"] }
pyo3 = { version = "0.25", features = ["extension-module", "abi3-py312"] }
pyo3-polars = { version = "0.22.0", features = ["derive", "dtype-array"] }
serde = "1.0.219"
