[project]
name = "polars-matrix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arnav Rastogi", email = "arnav.rastogi101@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
]

[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "**/*.rs"}]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "polars_matrix._lib"
python-packages = ["polars_matrix"]

[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=1.31.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
